--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/AleGarQ/cypress-excercise/issues"
   },
-  "homepage": "https://github.com/AleGarQ/cypress-excercise#readme"
+  "homepage": "https://github.com/AleGarQ/cypress-excercise#readme",
+  "devDependencies": {
+    "cypress": "^12.7.0"
+  }
 }
