--- a/.gitignore
+++ b/.gitignore
@@ -195,4 +195,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+cypress/e2e/1-getting-started/*
+cypress/e2e/2-advanced-examples/*
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,node,cypressio
